# NSC325_COMPLETITION_TEAMONE

./: README.md  pyproject.toml  requirements.txt
data/: UT Comp_Seq.xlsx  UT Comp_Seq_Feet.csv  UT_Comp_With_Neighbor_Wells_1000_Formation_Weighted_Count.csv  prediction_intervals.csv
notebooks/: Completions_Final.ipynb  Completions_Graphs.ipynb  README.md
src/nsc325_group1/: __init__.py
