[project]
name = "nsc325-group1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[project.scripts]
nsc325-group1 = "nsc325_group1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
